# MedicalRagChatBot

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: application.py
app/common/: custom_exception.py  logger.py
app/components/: DataLoader.py  embedding.py  llm.py  pdfloder.py  retriever.py  vectorStore.py
app/config/: config.py
app/templates/: index.html
