[project]
name = "medicalrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "flask>=3.1.3",
    "huggingface-hub>=0.36.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "pypdf>=6.7.3",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.3",
]
